--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -685,6 +685,9 @@
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "Mijn app bijwerken.";
 
+/* Displayed while waiting for link preview to load */
+"loading.preview" = "Voorbeeld wordt geladen...";
+
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Ik";
 
