--- a/HalloAppClip/de.lproj/Localizable.strings
+++ b/HalloAppClip/de.lproj/Localizable.strings
@@ -82,6 +82,9 @@
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "Meine App aktualisieren.";
 
+/* Displayed while waiting for link preview to load */
+"loading.preview" = "Vorschau wird geladen...";
+
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Ich";
 
