--- a/Notification Service Extension/es.lproj/Localizable.strings
+++ b/Notification Service Extension/es.lproj/Localizable.strings
@@ -73,6 +73,9 @@
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "Actualiza tu aplicación.";
 
+/* Displayed while waiting for link preview to load */
+"loading.preview" = "Cargando vista previa...";
+
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Yo";
 
