--- a/Halloapp/de.lproj/Localizable.strings
+++ b/Halloapp/de.lproj/Localizable.strings
@@ -481,6 +481,12 @@
 /* Possible Feed Privacy setting value. Keep short. */
 "feed.privacy.value.n.selected" = "feed.privacy.value.n.selected";
 
+/* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.body" = "Verwende deine Handynummer, um dich mit Freunden und Familie in einem digitalen Raum ohne Werbung, Marken, Likes und Influencer zu verbinden.\n\nHalloApp ist für dich und die, die dir nahe stehen - ganz privat. Lade deine wahren Freunde ein, um loszulegen!";
+
+/* Title of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.title" = "Willkommen bei HalloApp, ein digitaler Raum für echte Beziehungen ✨";
+
 /* Button under someone's post. Verb. */
 "feedpost.button.comment" = "Kommentieren";
 
@@ -556,6 +562,12 @@
 /* Message text shown when you remove a group member */
 "group.event.removed.member.you" = "Du hast %1@ entfernt";
 
+/* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
+"group.feed.welcome.post.body" = "Teile diesen Link mit Freunden und sie werden automatisch deiner Gruppe beitreten.";
+
+/* Title of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
+"group.feed.welcome.post.title" = "Lade Freunde zu deiner Gruppe ein";
+
 /* Action label for inviting others to join the group via link */
 "group.info.invite.to.group.via.link" = "Per Link zur Gruppe einladen";
 
@@ -624,6 +636,9 @@
 
 /* Text shown when user is about to remove the group */
 "groups.list.remove.message" = "Möchtest du wirklich diese Gruppe und ihren Inhalt von deinem Gerät entfernen?";
+
+/* The name of the group that is created for the user when they are new and in the zero zone (no contacts and no content) */
+"groups.NUX.user.group.name" = "%@'s Gruppe";
 
 /* A label on the header to indicate which person I have groups in common with */
 "groups.title" = "Mit %@";
